[package]
name = "arrbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
byteorder = "1"
endian_trait = "0.6"
num = "0.4"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "macros",
  "sqlite",
  "uuid",
  "chrono",
] }
